// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component should render an H1 correctly 1`] = `
<div>
  <h1
    class="Heading Heading--xxxl"
  >
    Hamburgefonstiv
  </h1>
</div>
`;

exports[`Heading component should render an H2 correctly 1`] = `
<div>
  <h2
    class="Heading Heading--xxl"
  >
    Hamburgefonstiv
  </h2>
</div>
`;

exports[`Heading component should render an H3 correctly 1`] = `
<div>
  <h3
    class="Heading Heading--xl"
  >
    Hamburgefonstiv
  </h3>
</div>
`;

exports[`Heading component should render an H4 correctly 1`] = `
<div>
  <h4
    class="Heading Heading--l"
  >
    Hamburgefonstiv
  </h4>
</div>
`;

exports[`Heading component should render an H5 correctly 1`] = `
<div>
  <h5
    class="Heading Heading--m"
  >
    Hamburgefonstiv
  </h5>
</div>
`;

exports[`Heading component should render an H6 correctly 1`] = `
<div>
  <h6
    class="Heading Heading--s"
  >
    Hamburgefonstiv
  </h6>
</div>
`;

exports[`Heading component should render correctly 1`] = `
<div>
  <span
    class="Heading"
  >
    Hamburgefonstiv
  </span>
</div>
`;

exports[`Heading component should render heading color correctly 1`] = `
<div>
  <span
    class="Heading Heading--xl"
    style="color: rgb(0, 10, 110);"
  >
    Hamburgefonstiv
  </span>
</div>
`;

exports[`Heading component should render heading level correctly 1`] = `
<div>
  <h1
    class="Heading Heading--xl"
  >
    Hamburgefonstiv
  </h1>
</div>
`;
